# strudy-racoon

./: .dockerignore  .env.example  .gitignore  README.md  SLIDES.md  docker-compose.yml  models.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: dependencies.py  logging_config.py  main.py  settings.py
backend/middleware/: __init__.py  errors.py  request_context.py
backend/routers/: __init__.py  detect.py  health.py  models.py
backend/services/: __init__.py  detection.py
bot/: __init__.py  formatting.py  main.py  settings.py
bot/handlers/: __init__.py  detect.py  errors.py  start.py
bot/services/: __init__.py  backend_client.py
deploy/: backend.Dockerfile  bot.Dockerfile  ui.Dockerfile
detector/: __init__.py  base.py  config.py  exceptions.py  factory.py  registry.py
detector/impl/: __init__.py  hf_transformer.py  pawn_detector.py  stub.py
detector/impl/pawn/: configs.py  dataset_module.py  extract_features.py  inference.py  mlp.py  model.py  train.py
detector/impl/pawn/model/: config.yaml
scripts/: smoke.sh
shared/contracts/: __init__.py  detection.py  errors.py  models.py
tests/backend/: conftest.py  test_detect.py  test_health.py  test_models.py
tests/bot/: test_backend_client.py  test_formatting.py
tests/detector/: test_config.py  test_factory.py  test_hf_transformer.py  test_registry.py  test_stub.py
tests/shared/: test_contracts.py
ui/: app.py
