[project]
name = "ai-text-detector"
version = "0.1.0"
description = "AI-generated text detection: FastAPI backend + aiogram Telegram bot."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic>=2.9",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "anyio>=4.6",
    "structlog>=24.4",
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
]
bot = [
    "aiogram>=3.15",
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
]
ml = [
    "torch>=2.5",
    "transformers>=4.46",
    "numpy>=2.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.33",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

# torch build selection, per platform:
#   * linux/x86_64  -> CUDA 13 (cu130) wheels. The deploy server has CUDA 13;
#     these wheels bundle their own CUDA runtime libs (cudart, cudnn, ...), so
#     the slim base image works as long as the container gets host GPU access
#     via the NVIDIA Container Toolkit (see docker-compose.yml `deploy.resources`).
#   * everything else (macOS, linux/aarch64) -> CPU wheels. On linux/aarch64 the
#     default PyPI wheel is the NVIDIA-Grace CUDA build (pulls cuda-toolkit, NVPL
#     BLAS) which on non-NVIDIA ARM — e.g. M1 under Docker — runs the unvectorized
#     DEFAULT CPU kernels and is very slow. The cpu index ships oneDNN + Arm
#     Compute Library + proper aarch64 vectorization. macOS has no CUDA wheels.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' or platform_machine != 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "bot", "detector", "shared"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["backend", "bot", "detector", "shared", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
    "ASYNC",    # flake8-async
    "N",        # pep8-naming
    "TID",      # tidy imports
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N"]
"bot/handlers/**" = ["RUF001", "RUF002", "RUF003"]
"bot/formatting.py" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "bot", "detector", "shared"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_return_any = true
show_error_codes = true
pretty = true
files = ["backend", "bot", "detector", "shared"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*", "transformers", "transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]
